S11-L162 completed dicee game

--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
   </head>
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1 class="button">Click Me</h1>
+      <h2 class="winner">To start the game!</h2>
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="assets/images/dice1.png">
+        <img class="img1" src="assets/images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="assets/images/dice2.png">
+        <img class="img2" src="assets/images/dice6.png">
       </div>
 
     </div>
+    <footer>
+      www 🎲 App Brewery 🎲 com
+    </footer>
 
+     <script src="assets/js/index.js"></script>
 
   </body>
 
-  <footer>
-    www 🎲 App Brewery 🎲 com
-  </footer>
+
 </html>
